--- a/mss.bib
+++ b/mss.bib
@@ -595,3 +595,13 @@
     url = "https://straylight.network/groundwire/groundwire-01",
     urldate = {2024-08-29}
 }
+
+@article{Monk2024,
+    author = {Philip C. Monk \patp{wicdev-wisryt}},
+    title = "Designing a Permanent Personal Identity: The Public Key Infrastructure Idea Maze",
+    journal = "Urbit Systems Technical Journal",
+    year = 2024,
+    volume = 1,
+    number = 2,
+    pages = "1--7",
+}
