--- a/mss.tex
+++ b/mss.tex
@@ -350,4 +350,5 @@ The design goals of \textsc{did}s are as follows (Section 1.2, ``Version 1.0 of 
 
 \selectlanguage{USenglish}
 \printbibliography
+\afterpage{\blankpage}
 \end{document}
